# STIB-display

./: .gitignore  README.md
cpp/: README.md
cpp/bus_display_led/: CMakeLists.txt  sdkconfig
cpp/bus_display_led/main/: CMakeLists.txt  led_controller.cpp  led_controller.h  led_updater.cpp  led_updater.h  main.cpp  ota_manager.cpp  ota_manager.h  storage_manager.cpp  storage_manager.h  web_server.cpp  web_server.h  wifi_manager.cpp  wifi_manager.h
hardware/: README.md
hardware/kicad/boards/: boards.kicad_prl  boards.kicad_pro  boards.kicad_sch
hardware/kicad/components_lib/: Converter_DCDC_4.2-10Vto3.3V.bak  Converter_DCDC_4.2-10Vto3.3V.kicad_sym  ESP32_Nodemcu_devkit_sym.bak  ESP32_Nodemcu_devkit_sym.kicad_sym
hardware/kicad/stib_display/: fp-info-cache  fp-lib-table  stib_display-B_Cu.gbr  stib_display-B_Mask.gbr  stib_display-B_Paste.gbr  stib_display-B_Silkscreen.gbr  stib_display-Edge_Cuts.gbr  stib_display-F_Cu.gbr  stib_display-F_Mask.gbr  stib_display-F_Paste.gbr  stib_display-F_Silkscreen.gbr  stib_display-NPTH.drl  stib_display-PTH.drl  stib_display-job.gbrjob  stib_display.kicad_pcb  stib_display.kicad_prl  stib_display.kicad_pro  stib_display.kicad_sch  stib_displayV0.kicad_pcb  stib_displayV0.kicad_prl  stib_displayV0.kicad_pro  sym-lib-table  ~stib_display.kicad_sch.lck
micropython/: README.md  compile.sh  main.py  mpy-cross
micropython/bus_display_led/: config.py  main.py
micropython/bus_display_led/leds/: led_controller.py
micropython/bus_display_led/static/: style.css
micropython/bus_display_led/wifi/: uQR.py  (+2 more)
pc-test/: request.py
(+3 files in other folders)
